--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+/.vs/
 CMakeLists.txt.user
 CMakeCache.txt
 CMakeFiles
@@ -9,3 +10,6 @@ install_manifest.txt
 compile_commands.json
 CTestTestfile.cmake
 _deps
+.idea
+/cmake-build-debug/
+/cmake-build-release/
